--- a/mpv.conf
+++ b/mpv.conf
@@ -99,7 +99,7 @@ ass-force-style=Kerning=yes
 # OSD / OSC #
 #############
 # OSD rice (for file info)
-osd-font="FZY3K--GBK1-0"
+osd-font="HiraginoSansGB-W3"
 osd-font-size=30
 osd-color="#ffffffff"                   # ARGB format
 osd-border-color="#ff151515"            # ARGB format
@@ -121,7 +121,7 @@ embeddedfonts=yes                       # use embedded fonts for SSA/ASS subs
 ass-force-style=Kerning=yes             # allows you to override style parameters of ASS scripts
 
 # the following options only apply to subtitles without own styling (i.e. not ASS but e.g. SRT)
-sub-text-font="FZY3K--GBK1-0"
+sub-text-font="HiraginoSansGB-W3"
 sub-text-font-size=52
 sub-text-color="#FFFFFFFF"
 sub-text-border-color="#FF262626"
