--- a/mpv.app/Contents/Resources/mpv.conf
+++ b/mpv.app/Contents/Resources/mpv.conf
@@ -80,8 +80,8 @@ screenshot-template=~/Pictures/%F-%P-shot-%04n
 # Languages #
 #############
 
-slang=eng,en            # automatically select these subtitles (decreasing priority)
-alang=jpn,jp,eng,en     # automatically select these audio tracks (decreasing priority)
+slang=zh,cn,chn,chi,eng,en,jpn,jp          # automatically select these subtitles (decreasing priority)
+alang=zh,cn,chn,jpn,jp,eng,en     # automatically select these audio tracks (decreasing priority)
 
 
 
