--- a/mpv.app/Contents/Resources/mpv.conf
+++ b/mpv.app/Contents/Resources/mpv.conf
@@ -132,7 +132,7 @@ sub-text-spacing=0.5
 
 ## For some weird reason, that appears to be needed on on some system, even though it semms to be properly auto-detected?
 ## I have disabled it by default and I have the common 60(fps/hz) as an example
-#display-fps = 60
+display-fps = 60
 
 # I don't want to wait ages for the window to finally show up before I can move my focus around again
 [protocol.http]
@@ -190,8 +190,7 @@ stop-screensaver = yes
 
 
 #vf add crop=512:512:64:64 #vf-clr
-
 ## - extra general settings, mostly video
-vo=backend=auto:es=yes:sdl=switch-mode:composite-detect:framedrop=vo:icc-profile-auto:scaling=hq
+## vo=backend=auto:es=yes:sdl=switch-mode:composite-detect:framedrop=vo:icc-profile-auto:scaling=hq
 save-position-on-quit
 #vf-add=vdpaupp=sharpen=0.10:denoise=0.10:deint=yes:deint-mode=temporal-spatial:pullup:hqscaling=1
