--- a/mpv.app/Contents/Resources/mpv.conf
+++ b/mpv.app/Contents/Resources/mpv.conf
@@ -11,9 +11,10 @@ msg-module                              # prepend module name to log messages
 msg-color                               # color log messages on terminal
 term-osd-bar                            # display a progress bar on the terminal
 use-filedir-conf                        # look for additional config files in the directory of the opened file
-#pause                                   # no autoplay
+#pause                                  # no autoplay
 keep-open                               # keep the player open when a file's end is reached
-autofit=100%x85%                 # resize window in case it's larger than W%xH% of the screen
+autofit=95%x100%                        # resize window in case it's larger than W%xH% of the screen
+geometry=50%:60%
 deinterlace=auto                        # 'auto' does not imply interlacing-detection
 cursor-autohide-fs-only                 # don't autohide the cursor in window mode, only fullscreen
 input-media-keys=no                     # enable/disable OSX media keys
