--- a/mpv.app/Contents/Resources/input.conf
+++ b/mpv.app/Contents/Resources/input.conf
@@ -33,11 +33,11 @@ DOWN       osd-msg-bar seek -30  relative+keyframes
 SHIFT+UP   osd-msg-bar seek +120 relative+keyframes
 SHIFT+DOWN osd-msg-bar seek -120 relative+keyframes
 
-CTRL+RIGHT osd-msg-bar sub_seek +1
-CTRL+LEFT  osd-msg-bar sub_seek -1
+CTRL+RIGHT osd-msg-bar sub-seek +1
+CTRL+LEFT  osd-msg-bar sub-seek -1
 
-CTRL+UP    add cache-size +50000 ; show_text "Cache Size: ${cache-size}\n| Used: ${cache-used}\n| Free: ${cache-free}"
-CTRL+DOWN  add cache-size -50000 ; show_text "Cache Size: ${cache-size}\n| Used: ${cache-used}\n| Free: ${cache-free}"
+CTRL+UP    add cache-size +50000 ; show-text "Cache Size: ${cache-size}\n| Used: ${cache-used}\n| Free: ${cache-free}"
+CTRL+DOWN  add cache-size -50000 ; show-text "Cache Size: ${cache-size}\n| Used: ${cache-used}\n| Free: ${cache-free}"
 
 PGUP  osd-msg-bar seek +600 relative+keyframes
 PGDWN osd-msg-bar seek -600 relative+keyframes
@@ -47,27 +47,27 @@ PGDWN osd-msg-bar seek -600 relative+keyframes
 # [1] [2] [3] [4] [5] [6] [7] [8] [9] [0]
 # [!] ["] [§] [$]  %   &   /   (  [)] [=] ?
 
-1      add contrast -1 ; show_text "Contrast: ${contrast}"
-2      add contrast +1 ; show_text "Contrast: ${contrast}"
-3      add brightness -1 ; show_text "Brightness: ${brightness}"
-4      add brightness +1 ; show_text "Brightness: ${brightness}"
-5      add gamma -1 ; show_text "Gamma: ${gamma}"
-6      add gamma +1 ; show_text "Gamma: ${gamma}"
-7      add saturation -1 ; show_text "Saturation: ${saturation}"
-8      add saturation +1 ; show_text "Saturation: ${saturation}"
-9      add volume -2 ; show_text "Volume: ${volume}"
-0      add volume +2 ; show_text "Volume: ${volume}"
+1      add contrast -1 ; show-text "Contrast: ${contrast}"
+2      add contrast +1 ; show-text "Contrast: ${contrast}"
+3      add brightness -1 ; show-text "Brightness: ${brightness}"
+4      add brightness +1 ; show-text "Brightness: ${brightness}"
+5      add gamma -1 ; show-text "Gamma: ${gamma}"
+6      add gamma +1 ; show-text "Gamma: ${gamma}"
+7      add saturation -1 ; show-text "Saturation: ${saturation}"
+8      add saturation +1 ; show-text "Saturation: ${saturation}"
+9      add volume -2 ; show-text "Volume: ${volume}"
+0      add volume +2 ; show-text "Volume: ${volume}"
 
-)      add balance -0.1 ; show_text "Audio Balance (pan): ${balance}"  # adjust audio balance in favor of left
-=      add balance +0.1 ; show_text "Audio Balance (pan): ${balance}"  #                                  right
+)      add balance -0.1 ; show-text "Audio Balance (pan): ${balance}"  # adjust audio balance in favor of left
+=      add balance +0.1 ; show-text "Audio Balance (pan): ${balance}"  #                                  right
 
 !      cycle ontop
 # cycle colormatrix-input-range
-"      cycle_values vf "format=colorlevels=full" "format=colorlevels=auto" "format=colorlevels=limited"
+"      cycle-values vf "format=colorlevels=full" "format=colorlevels=auto" "format=colorlevels=limited"
 # cycle colormatrix-output-range
-§      cycle_values vf "format=outputlevels=full" "format=outputlevels=auto" "format=outputlevels=limited"
+§      cycle-values vf "format=outputlevels=full" "format=outputlevels=auto" "format=outputlevels=limited"
 # cycle colormatrix
-$      cycle_values vf "format=colormatrix=auto" "format=colormatrix=bt.601" "format=colormatrix=bt.709" "format=colormatrix=bt.2020-ncl" "format=colormatrix=bt.2020-cl" "format=colormatrix=smpte-240m"
+$      cycle-values vf "format=colormatrix=auto" "format=colormatrix=bt.601" "format=colormatrix=bt.709" "format=colormatrix=bt.2020-ncl" "format=colormatrix=bt.2020-cl" "format=colormatrix=smpte-240m"
 
 %      ignore
 &      ignore
@@ -81,24 +81,24 @@ $      cycle_values vf "format=colormatrix=auto" "format=colormatrix=bt.601" "fo
 # [Q] [W] [E] [R] [T] Z U  I  [O]  P
 
 #q      quit # handeled by auto-save-state.lua script
-Q      quit_watch_later
+Q      quit-watch-later
 q      {encode} quit 4
 
-w      playlist_prev ; show_text "${playlist}"
-e      playlist_next ; show_text "${playlist}"
-W      show_text "${playlist}"
-E      show_text "${playlist}"
+w      playlist-prev ; show-text "${playlist}"
+e      playlist-next ; show-text "${playlist}"
+W      show-text "${playlist}"
+E      show-text "${playlist}"
 
 r      set ab-loop-a ${time-pos}
 t      set ab-loop-b ${time-pos}
 R      set ab-loop-a no
 T      set ab-loop-b no
 
-#i     used by stats script
-#I     used by stats script
+i      script-binding stats/display_stats
+I      script-binding stats/display_stats_toggle
 o      cycle framedrop
 O      osd
-p      show_progress
+p      show-progress
 
 z      ignore
 u      ignore
@@ -112,43 +112,43 @@ P      ignore
 # [A] [S] [D] [F] [G] [H] [J] [K] [L]  '
 
 a      cycle audio                          # switch audio streams
-A      cycle_values af "drc:1" "drc:2" "lavfi=[dynaudnorm]" ""         # dynamic range compression
+A      cycle-values af "drc:1" "drc:2" "lavfi=[dynaudnorm]" ""         # dynamic range compression
 s      cycle sub                            # cycle through subtitles
 S      cycle sub-visibility
 CTRL+s cycle secondary-sid
-ALT+s  cycle_values ass-force-margins "yes" "no"  # does not work with :blend-subtitles
-d      cycle_values window-scale "1.5" "2.0" "0.5" "1.0" ; show_text "Scale: ${window-scale}"
-D      cycle_values video-aspect "4:3" "16:9" "16:10" "2.35:1" "-1" ; show_text "Aspect Ratio: ${?video-aspect==1.500:3:2}${?video-aspect==1.333:4:3}${?video-aspect==1.778:16:9}${?video-aspect==1.600:16:10}${?video-aspect==2.350:2.35:1}"
+ALT+s  cycle-values ass-force-margins "yes" "no"  # does not work with :blend-subtitles
+d      cycle-values window-scale "1.5" "2.0" "0.5" "1.0" ; show-text "Scale: ${window-scale}"
+D      cycle-values video-aspect "4:3" "16:9" "16:10" "2.35:1" "-1" ; show-text "Aspect Ratio: ${?video-aspect==1.500:3:2}${?video-aspect==1.333:4:3}${?video-aspect==1.778:16:9}${?video-aspect==1.600:16:10}${?video-aspect==2.350:2.35:1}"
 CTRL+d cycle video
-f      cycle fullscreen ; show_text "Scale: ${window-scale}"
+f      cycle fullscreen ; show-text "Scale: ${window-scale}"
 F      vf clr ""                            # clear all filters
 
 g      vf toggle format=yuv420p,vapoursynth=~~/vs-scripts/motion-interpolation.py:2
 G      vf toggle vapoursynth=~~/vs-scripts/f3kdb.py
 Ctrl+g vf toggle format=yuv420p,vapoursynth=~~/vs-scripts/motion-interpolation-brokenfps.py:2
 h      cycle deinterlace
-H      script_binding autodeint
+H      script-binding autodeint
 Ctrl+h vf toggle vapoursynth=~~/vs-scripts/decimate.py
 j      vf toggle "lavfi=[hqdn3d=2.0]"       # denoise
 J      vf toggle "lavfi=[unsharp]"          # sharpen
-k      vf toggle "eq=1:-1" ; show_text "Invert luma"
-K      cycle_values hue 100 0 ; show_text "Invert chroma"
+k      vf toggle "eq=1:-1" ; show-text "Invert luma"
+K      cycle-values hue 100 0 ; show-text "Invert chroma"
 
-l      cycle_values loop yes no ; show_text "${?=loop==inf:Looping enabled}${?=loop==no:Looping disabled}"
-L      cycle_values loop-file yes no ; show_text "${?=loop-file==yes:Looping enabled (file)}${?=loop-file==no:Looping disabled (file)}"
-CTRL+l ab_loop
+l      cycle-values loop yes no ; show-text "${?=loop==inf:Looping enabled}${?=loop==no:Looping disabled}"
+L      cycle-values loop-file yes no ; show-text "${?=loop-file==yes:Looping enabled (file)}${?=loop-file==no:Looping disabled (file)}"
+CTRL+l ab-loop
 
 SHARP  vf toggle "format=colorlevels=full"
-'      cycle_values video-rotate 90 180 270 0
+'      cycle-values video-rotate 90 180 270 0
 
 
 # [y] [x] [c] [v] [b] [n] [m] [,] [.]
 # [Y]  X   C   V   B  [N] [M]  ;   :
 
-y      show_text "${chapter-list}"
-Y      show_text "${playlist}"
-CTRL+y show_text "${playlist}"
-x      show_text "${track-list}"
+y      show-text "${chapter-list}"
+Y      show-text "${playlist}"
+CTRL+y show-text "${playlist}"
+x      show-text "${track-list}"
 
 c      set speed 1.0
 v      add speed -0.05
@@ -160,8 +160,8 @@ CTRL+m set sub-delay 0
 N      add audio-delay -0.10
 M      add audio-delay +0.10
 
-.      frame_step ; show_text "Frame: ${estimated-frame-number} / ${estimated-frame-count}"
-,      frame_back_step ; show_text "Frame: ${estimated-frame-number} / ${estimated-frame-count}"
+.      frame-step ; show-text "Frame: ${estimated-frame-number} / ${estimated-frame-count}"
+,      frame-back-step ; show-text "Frame: ${estimated-frame-number} / ${estimated-frame-count}"
 
 X      ignore
 C      ignore
@@ -175,10 +175,10 @@ B      ignore
 # [<] [>] [+] [-] [esc] [space] [BackSpace]
 #         [*] [_] [tab] [enter]
 
->      osd-msg-bar add chapter -1
-<      osd-msg-bar add chapter +1
-CTRL+> osd-msg playlist_prev
-CTRL+< osd-msg playlist_next
+<      osd-msg-bar add chapter -1
+>      osd-msg-bar add chapter +1
+CTRL+> osd-msg playlist-prev
+CTRL+< osd-msg playlist-next
 
 -      add sub-scale -0.05                  # decrease subtitle font size
 +      add sub-scale +0.05                  # increase subtitle font size
@@ -189,10 +189,10 @@ ESC               cycle fullscreen
 SPACE             cycle pause
 IDEOGRAPHIC_SPACE cycle pause
 TAB               cycle mute
-ENTER             show_progress
-SHIFT+ENTER       cycle_values video-rotate 90 180 270 0
+ENTER             show-progress
+SHIFT+ENTER       cycle-values video-rotate 90 180 270 0
 
-BS     set gamma 0 ; set brightness 0 ; set contrast 0 ; set saturation 0 ; set hue 0 ; show_text "Gamma/Brightness/Contrast/Saturation/Hue resetted"
+BS     set speed 1.0 ; set gamma 0 ; set brightness 0 ; set contrast 0 ; set saturation 0 ; set hue 0 ; show-text "Speed/Gamma/Brightness/Contrast/Saturation/Hue resetted"
 
 
 
@@ -203,7 +203,7 @@ KP1      add video-zoom  -0.05
 KP2      add video-pan-y -0.01
 KP3      add video-zoom   0.05
 KP4      add video-pan-x  0.01
-KP5      set video-zoom 0 ; set video-pan-x 0 ; set video-pan-y 0 ; show_text "Reset zoom/pan"
+KP5      set video-zoom 0 ; set video-pan-x 0 ; set video-pan-y 0 ; show-text "Reset zoom/pan"
 KP6      add video-pan-x -0.01
 KP7      add video-zoom  -0.05
 KP8      add video-pan-y  0.01
@@ -216,7 +216,7 @@ CTRL+1   add video-zoom  -0.05
 CTRL+2   add video-pan-y -0.01
 CTRL+3   add video-zoom   0.05
 CTRL+4   add video-pan-x  0.01
-CTRL+5   set video-zoom 0 ; set video-pan-x 0 ; set video-pan-y 0 ; show_text "Reset zoom/pan"
+CTRL+5   set video-zoom 0 ; set video-pan-x 0 ; set video-pan-y 0 ; show-text "Reset zoom/pan"
 CTRL+6   add video-pan-x -0.01
 CTRL+7   add video-zoom  -0.05
 CTRL+8   add video-pan-y  0.01
@@ -234,7 +234,7 @@ AR_NEXT        osd-msg-bar seek 10
 AR_NEXT_HOLD   osd-msg-bar seek 120
 AR_PREV        osd-msg-bar seek -10
 AR_PREV_HOLD   osd-msg-bar seek -120
-AR_MENU        show_progress
+AR_MENU        show-progress
 AR_MENU_HOLD   cycle mute
 AR_VUP         add volume 1
 AR_VUP_HOLD    add chapter 1
@@ -246,17 +246,17 @@ AR_VDOWN_HOLD  add chapter -1
 # Unused
 
 POWER       quit
-MENU        show_progress
+MENU        show-progress
 PLAY        cycle pause
 PAUSE       cycle pause
 PLAYPAUSE   cycle pause
 STOP        quit
 FORWARD     osd-msg-bar seek +5  relative keyframes
 REWIND      osd-msg-bar seek -5  relative keyframes
-NEXT        osd-msg playlist_next
-PREV        osd-msg playlist_prev
-VOLUME_UP   add volume +2 ; show_text "Volume: ${volume}"
-VOLUME_DOWN add volume -2 ; show_text "Volume: ${volume}"
+NEXT        osd-msg playlist-next
+PREV        osd-msg playlist-prev
+VOLUME_UP   add volume +2 ; show-text "Volume: ${volume}"
+VOLUME_DOWN add volume -2 ; show-text "Volume: ${volume}"
 MUTE        cycle mute
 CLOSE_WIN   quit
 
