--- a/mpv.app/Contents/Info.plist
+++ b/mpv.app/Contents/Info.plist
@@ -185,7 +185,7 @@
     <key>CFBundlePackageType</key>
     <string>APPL</string>
     <key>CFBundleShortVersionString</key>
-    <string>0.20.0</string>
+    <string>git-c239b7d</string>
     <key>NSHighResolutionCapable</key>
     <true/>
     <key>CFBundleURLTypes</key>
