--- a/mpv.app/Contents/Resources/mpv.conf
+++ b/mpv.app/Contents/Resources/mpv.conf
@@ -1,20 +1,20 @@
 # vim: syntax=config
 profile=pseudo-gui
 
+
 ###########
 # General #
 ###########
 
 #save-position-on-quit
-                              # no window title bar
+#no-border                               # no window title bar
 msg-module                              # prepend module name to log messages
 msg-color                               # color log messages on terminal
 term-osd-bar                            # display a progress bar on the terminal
 use-filedir-conf                        # look for additional config files in the directory of the opened file
-#pause                                  # no autoplay
+#pause                                   # no autoplay
 keep-open                               # keep the player open when a file's end is reached
-autofit=95%x100%                        # resize window in case it's larger than W%xH% of the screen
-geometry=50%:60%
+autofit-larger=95%x100%                 # resize window in case it's larger than W%xH% of the screen
 deinterlace=auto                        # 'auto' does not imply interlacing-detection
 cursor-autohide-fs-only                 # don't autohide the cursor in window mode, only fullscreen
 input-media-keys=no                     # enable/disable OSX media keys
@@ -97,7 +97,7 @@ alang=ja,jp,jpn,en,eng,de,deu,ger       # automatically select these audio track
 
 audio-file-auto=fuzzy                   # external audio doesn't has to match the file name exactly to autoload
 audio-pitch-correction=yes              # automatically insert scaletempo when playing with higher speed
-volume-max=200
+volume-max=200                          # maximum volume in %, everything above 100 results in amplification
 volume=100                              # default volume, 100 = unchanged
 
 
@@ -140,6 +140,8 @@ hwdec=auto
 
 [default]
 vo=opengl
+
+
 ###################################
 # Protocol Specific Configuration #
 ###################################
