generally add denoise to config

--- a/mpv.app/Contents/Resources/mpv.conf
+++ b/mpv.app/Contents/Resources/mpv.conf
@@ -1,6 +1,6 @@
 # vim: syntax=config
 profile=pseudo-gui
-
+vf=lavfi=[hqdn3d=2:1:2:3]
 
 ###########
 # General #
@@ -122,13 +122,14 @@ cscale-antiring=0.9
 [mid-quality]
 profile-desc="Medium quality VO settings"
 vo=opengl
-profile=opengl-hq
+profile=opengl-h
 scale=spline36
 cscale=spline36
 dscale=mitchell
 tscale=linear
 scale-antiring=0.8
 cscale-antiring=0.9
+
 
 [low-quality]
 profile-desc="Low energy VO settings"
