--- a/mpv.app/Contents/Resources/mpv.conf
+++ b/mpv.app/Contents/Resources/mpv.conf
@@ -122,7 +122,7 @@ cscale-antiring=0.9
 [mid-quality]
 profile-desc="Medium quality VO settings"
 vo=opengl
-profile=opengl-h
+profile=opengl-hq
 scale=spline36
 cscale=spline36
 dscale=mitchell
