--- a/mpv.app/Contents/Resources/mpv.conf
+++ b/mpv.app/Contents/Resources/mpv.conf
@@ -1,7 +1,5 @@
 # vim: syntax=config
-profile=pseudo-gui
-vf=lavfi=[hqdn3d=2:1:2:3]
-
+player-operation-mode=pseudo-gui
 ###########
 # General #
 ###########
