--- a/mpv.app/Contents/Resources/mpv.conf
+++ b/mpv.app/Contents/Resources/mpv.conf
@@ -1,16 +1,17 @@
 # vim: syntax=config
 player-operation-mode=pseudo-gui
+
 ###########
 # General #
 ###########
 
 #save-position-on-quit
-#no-border                               # no window title bar
+#no-border                              # no window title bar
 msg-module                              # prepend module name to log messages
 msg-color                               # color log messages on terminal
 term-osd-bar                            # display a progress bar on the terminal
 use-filedir-conf                        # look for additional config files in the directory of the opened file
-#pause                                   # no autoplay
+#pause                                  # no autoplay
 keep-open                               # keep the player open when a file's end is reached
 autofit-larger=95%x100%                 # resize window in case it's larger than W%xH% of the screen
 deinterlace=auto                        # 'auto' does not imply interlacing-detection
@@ -23,15 +24,15 @@ screenshot-png-compression=8
 screenshot-template='~/Desktop/%F (%P) %n'
 
 hls-bitrate=max                         # use max quality for HLS streams
-ytdl-raw-options=format="rtmp-PREMIUM/h264_aac_ts_http_m3u8_http-3264/vp8_vorbis_webm_http_na_na-veryhigh/bestvideo+bestaudio/best"
 
+ytdl-raw-options=format="[protocol!=http_dash_segments][protocol!=rtmp]"
 
 #########
 # Cache #
 #########
 
 cache=yes
-cache-default=800000                    # size in KB
+cache-default=750000                    # size in KB
 cache-backbuffer=25000                  # size in KB
 cache-initial=0                         # start playback when your cache is filled up with x kB
 cache-secs=10                           # how many seconds of audio/video to prefetch if the cache is active
@@ -61,24 +62,24 @@ osd-bar-w=60                            # width of " " "
 #############
 
 sub-use-margins
-ass-force-margins
+sub-ass-force-margins
 
 demuxer-mkv-subtitle-preroll            # try to correctly show embedded subs when seeking
 sub-auto=fuzzy                          # external subs don't have to match the file name exactly to autoload
 sub-paths=ass:srt:sub:subs:subtitles    # search for external subs in the listed subdirectories
 embeddedfonts=yes                       # use embedded fonts for SSA/ASS subs
 sub-fix-timing=no                       # do not try to fix gaps (which might make it worse in some cases)
-ass-force-style=Kerning=yes             # allows you to override style parameters of ASS scripts
+sub-ass-force-style=Kerning=yes         # allows you to override style parameters of ASS scripts
 
 # the following options only apply to subtitles without own styling (i.e. not ASS but e.g. SRT)
-sub-text-font="Source Sans Pro Semibold"
-sub-text-font-size=36
-sub-text-color="#FFFFFFFF"
-sub-text-border-color="#FF262626"
-sub-text-border-size=3.2
-sub-text-shadow-offset=1
-sub-text-shadow-color="#33000000"
-sub-text-spacing=0.5
+sub-font="Source Sans Pro Semibold"
+sub-font-size=36
+sub-color="#FFFFFFFF"
+sub-border-color="#FF262626"
+sub-border-size=3.2
+sub-shadow-offset=1
+sub-shadow-color="#33000000"
+sub-spacing=0.5
 
 
 #############
@@ -149,14 +150,14 @@ vo=opengl
 #cache=yes
 #cache-default=500000                    # size in KB
 #cache-backbuffer=250000                 # size in KB
-cache-secs=100                          # how many seconds of audio/video to prefetch
+cache-secs=100                           # how many seconds of audio/video to prefetch
 user-agent='Mozilla/5.0 (Macintosh; Intel Mac OS X 10.11; rv:47.0) Gecko/20100101 Firefox/47.0'
 
 [protocol.http]
 #cache=yes
 #cache-default=500000                    # size in KB
 #cache-backbuffer=250000                 # size in KB
-cache-secs=100                          # how many seconds of audio/video to prefetch
+cache-secs=100                           # how many seconds of audio/video to prefetch
 user-agent='Mozilla/5.0 (Macintosh; Intel Mac OS X 10.11; rv:47.0) Gecko/20100101 Firefox/47.0'
 
 [extension.gif]
