update osc settings

--- a/mpv.app/Contents/Resources/lua-settings/osc.conf
+++ b/mpv.app/Contents/Resources/lua-settings/osc.conf
@@ -1,6 +1,7 @@
-layout=slimbox
-seekbarstyle=bar
+layout=bottombar
 valign=0.9
 deadzonesize=0.9
 hidetimeout=500
 minmousemove=1
+vidscale=yes
+boxalpha=150
