reduce cpu stress

--- a/mpv.app/Contents/Resources/input.conf
+++ b/mpv.app/Contents/Resources/input.conf
@@ -129,7 +129,7 @@ Ctrl+g vf toggle format=yuv420p,vapoursynth=~~/vs-scripts/motion-interpolation-b
 h      cycle deinterlace
 H      script-binding autodeint
 Ctrl+h vf toggle vapoursynth=~~/vs-scripts/decimate.py
-j      vf toggle "lavfi=[hqdn3d=2.0]"       # denoise
+j      vf toggle "lavfi=[hqdn3d=2],lavfi=[pp=de/-al]"       # denoise
 J      vf toggle "lavfi=[unsharp]"          # sharpen
 k      vf toggle "eq=1:-1" ; show-text "Invert luma"
 K      cycle-values hue 100 0 ; show-text "Invert chroma"
