--- a/mpv.app/Contents/Resources/mpv.conf
+++ b/mpv.app/Contents/Resources/mpv.conf
@@ -32,7 +32,7 @@ ytdl-raw-options=format="[protocol!=http_dash_segments][protocol!=rtmp]"
 #########
 
 cache=yes
-cache-default=1000000                   # size in KB
+cache-default=375000                    # size in KB
 cache-backbuffer=25000                  # size in KB
 cache-initial=0                         # start playback when your cache is filled up with x kB
 cache-secs=10                           # how many seconds of audio/video to prefetch if the cache is active
