change lang priority

--- a/mpv.app/Contents/Resources/mpv.conf
+++ b/mpv.app/Contents/Resources/mpv.conf
@@ -86,8 +86,8 @@ sub-spacing=0.5
 # Languages #
 #############
 
-slang=enm,en,eng,de,deu,ger             # automatically select these subtitles (decreasing priority)
-alang=ja,jp,jpn,en,eng,de,deu,ger       # automatically select these audio tracks (decreasing priority)
+slang=cn,chn,chs,chi,enm,en,eng         # automatically select these subtitles (decreasing priority)
+alang=cn,chn,chs,chi,ja,jp,jpn,en,eng   # automatically select these audio tracks (decreasing priority)
 
 
 #########
