always show drpped drames and time

--- a/mpv.app/Contents/Resources/encoding-profiles.conf
+++ b/mpv.app/Contents/Resources/encoding-profiles.conf
@@ -66,9 +66,15 @@ ovc = h263
 ovcopts = qscale=4
 
 [enc-v-h264]
-profile-desc = "H.264 (x264)"
+profile-desc = "H.264 (x264) (crf=23)"
 ovc = libx264
 ovcopts = preset=medium,crf=23,threads=0
+vf-add = noformat=444p,noformat=444p9,noformat=444p10,noformat=422p,noformat=422p9,noformat=422p10
+
+[enc-v-h264-hq]
+profile-desc = "H.264 (x264) (crf=18)"
+ovc = libx264
+ovcopts = preset=slow,crf=18,threads=0
 vf-add = noformat=444p,noformat=444p9,noformat=444p10,noformat=422p,noformat=422p9,noformat=422p10
 
 [enc-v-mpeg2]
@@ -84,7 +90,40 @@ ovcopts = qscale=4
 [enc-v-vp8]
 profile-desc = "VP8 (libvpx)"
 ovc = libvpx
-ovcopts = qmin=4,b=10000000k # ought to be enough for anyone; for CBR use, set b=; for VBR use, set qmin= to quality
+ovcopts = qmin=2,qmax=50,crf=8,b=2000K,threads=8
+
+[enc-v-vp8-hq]
+profile-desc = "VP8 (libvpx) HQ"
+ovc = libvpx
+ovcopts = qmin=0,qmax=50,crf=6,b=3500K,threads=8
+
+[enc-v-vp8-720]
+profile-desc = "VP8 (libvpx) scaled to 720p"
+ovc = libvpx
+ovcopts = qmin=2,qmax=50,crf=8,b=2000K,threads=8
+vf-add = scale=w=-3:h=720
+sws-scaler = spline
+
+[enc-v-vp8-480]
+profile-desc = "VP8 (libvpx) scaled to 480"
+ovc = libvpx
+ovcopts = qmin=3,crf=8,b=1500K,threads=8
+vf-add = scale=w=-3:h=480
+sws-scaler = spline
+
+[enc-v-vp8-360]
+profile-desc = "VP8 (libvpx) scaled to 360"
+ovc = libvpx
+ovcopts = qmin=3,crf=8,b=1500K,threads=8
+vf-add = scale=w=-3:h=360
+sws-scaler = spline
+
+[enc-v-vp8-1440-width]
+profile-desc = "VP8 (libvpx) scaled to 360"
+ovc = libvpx
+ovcopts = qmin=3,crf=8,b=1500K,threads=8
+vf-add = scale=w=1440:h=-3
+sws-scaler = spline
 
 ###########
 # formats #
@@ -114,11 +153,59 @@ profile = enc-v-h264
 profile = enc-a-aac
 ofopts-clr = yes
 
+[enc-f-mp4-hq]
+profile-desc = "H.264 + AAC (for MP4) HQ"
+of = mp4
+ocopyts = yes
+profile = enc-v-h264-hq
+profile = enc-a-aac
+ofopts-clr = yes
+
 [enc-f-webm]
 profile-desc = "VP8 + Vorbis (for WebM)"
 of = webm
 ocopyts = yes
 profile = enc-v-vp8
+profile = enc-a-vorbis
+ofopts-clr = yes
+
+[enc-f-webm-hq]
+profile-desc = "VP8 + Vorbis (for WebM) HQ"
+of = webm
+ocopyts = yes
+profile = enc-v-vp8-hq
+profile = enc-a-vorbis
+ofopts-clr = yes
+
+[enc-f-webm-720]
+profile-desc = "VP8 + Vorbis (for WebM) video scaled to 720p"
+of = webm
+ocopyts = yes
+profile = enc-v-vp8-720
+profile = enc-a-vorbis
+ofopts-clr = yes
+
+[enc-f-webm-480]
+profile-desc = "VP8 + Vorbis (for WebM) video scaled to 480p"
+of = webm
+ocopyts = yes
+profile = enc-v-vp8-480
+profile = enc-a-vorbis
+ofopts-clr = yes
+
+[enc-f-webm-360]
+profile-desc = "VP8 + Vorbis (for WebM) video scaled to 360p"
+of = webm
+ocopyts = yes
+profile = enc-v-vp8-360
+profile = enc-a-vorbis
+ofopts-clr = yes
+
+[enc-f-webm-1440-width]
+profile-desc = "VP8 + Vorbis (for WebM) video scaled to a width of 1440"
+of = webm
+ocopyts = yes
+profile = enc-v-vp8-1440-width
 profile = enc-a-vorbis
 ofopts-clr = yes
 
