--- a/mpv.app/Contents/Resources/mpv.conf
+++ b/mpv.app/Contents/Resources/mpv.conf
@@ -44,7 +44,7 @@ cache-secs=10                           # how many seconds of audio/video to pre
 
 osd-level=1                             # enable osd and display --osd-status-msg on interaction
 osd-duration=2500                       # hide the osd after x ms
-osd-msg1=${time-pos} / ${duration}${?vo-drop-frame-count:　Dropped: ${vo-drop-frame-count}
+osd-msg1=${time-pos} / ${duration}${?vo-drop-frame-count:　Dropped: ${vo-drop-frame-count}}
 osd-status-msg='${time-pos} / ${duration}${?percent-pos:　(${percent-pos}%)}${?vo-drop-frame-count:${!vo-drop-frame-count==0:　Dropped: ${vo-drop-frame-count}}}\n${?chapter:Chapter: ${chapter}}'
 
 osd-font='Hiragino Sans W1'
