--- a/mpv.app/Contents/Info.plist
+++ b/mpv.app/Contents/Info.plist
@@ -185,7 +185,7 @@
     <key>CFBundlePackageType</key>
     <string>APPL</string>
     <key>CFBundleShortVersionString</key>
-    <string>0.22.0</string>
+    <string>git-3eceac2</string>
     <key>NSHighResolutionCapable</key>
     <true/>
     <key>CFBundleURLTypes</key>
