--- a/mpv.app/Contents/Resources/mpv.conf
+++ b/mpv.app/Contents/Resources/mpv.conf
@@ -24,7 +24,7 @@ screenshot-png-compression=8
 screenshot-template='~/Desktop/%F (%P) %n'
 
 hls-bitrate=max                         # use max quality for HLS streams
-ytdl-raw-options=format="[protocol!=http_dash_segments][protocol!=rtmp]"
+ytdl-format=bestvideo[height<=?1080][fps<=?30][vcodec!=?vp9][protocol!=http_dash_segments]+bestaudio/best #[protocol!=http_dash_segments][protocol!=rtmp]
 
 
 #########
@@ -45,7 +45,7 @@ cache-secs=10                           # how many seconds of audio/video to pre
 osd-level=1                             # enable osd and display --osd-status-msg on interaction
 osd-duration=2500                       # hide the osd after x ms
 osd-msg1=${time-pos} / ${duration}${?vo-drop-frame-count:　Dropped: ${vo-drop-frame-count}}
-osd-status-msg='${time-pos} / ${duration}${?percent-pos:　(${percent-pos}%)}${?vo-drop-frame-count:${!vo-drop-frame-count==0:　Dropped: ${vo-drop-frame-count}}}\n${?chapter:Chapter: ${chapter}}'
+osd-status-msg='${time-pos} / ${duration}${?percent-pos:　(${percent-pos}%)}${?frame-drop-count:${!frame-drop-count==0:　Dropped: ${frame-drop-count}}}\n${?chapter:Chapter: ${chapter}}'
 
 osd-font='Hiragino Sans W1'
 osd-font-size=22
@@ -105,41 +105,72 @@ volume=100                              # default volume, 100 = unchanged
 # Video Output #
 ################
 
-# Active VOs (and some other options) are set externally by a script
-# The profiles here are kind of a fallback
+# Active VOs (and some other options) are set conditionally
+# See here for more information: https://github.com/wm4/mpv-scripts/blob/master/auto-profiles.lua
+# The script was slightly modified, functions from scripts/auto-profiles-functions.lua are imported
+
+# Defaults for all profiles
+vo=opengl
+tscale=catmull_rom                      # sharp: oversample <-> linear (triangle) <-> catmull_rom <-> mitchell <-> gaussian <-> bicubic : smooth
+opengl-early-flush=no
+opengl-pbo=yes
+
 
 [high-quality]
-profile-desc="High quality VO settings"
-vo=opengl
-profile=opengl-hq
+profile-desc=cond:is_desktop() and get('width', math.huge) < 3840
 scale=ewa_lanczossharp
 cscale=ewa_lanczossoft
 dscale=mitchell
-tscale=linear
-scale-antiring=0.8
-cscale-antiring=0.9
+scale-antiring=0.7
+cscale-antiring=0.7
+dither-depth=auto
+correct-downscaling=yes
+sigmoid-upscaling=yes
+deband=yes
+hwdec=no
 
 [mid-quality]
-profile-desc="Medium quality VO settings"
-vo=opengl
-profile=opengl-hq
+profile-desc=cond:(is_laptop() and not on_battery() and get('width', math.huge) < 1920) or (is_desktop() and get('width', math.huge) >= 3840)
 scale=spline36
-cscale=spline36
+cscale=bilinear
 dscale=mitchell
-tscale=linear
-scale-antiring=0.8
-cscale-antiring=0.9
+scale-antiring=1.0
+cscale-antiring=1.0
+dither-depth=auto
+correct-downscaling=yes
+sigmoid-upscaling=yes
+deband=yes
+hwdec=no
 
 [low-quality]
-profile-desc="Low energy VO settings"
-vo=opengl
-scale=spline36
-dscale=mitchell
-tscale=linear
+profile-desc=cond:is_laptop() and (on_battery() or get('width', math.huge) >= 1920)
+scale=bilinear
+cscale=bilinear
+dscale=bilinear
+scale-antiring=0.0
+cscale-antiring=0.0
+dither-depth=no
+correct-downscaling=no
+sigmoid-upscaling=no
+deband=no
 hwdec=auto
 
+[60FPS]
+profile-desc=cond:is_laptop() and get('container-fps', 0) >= 59
+scale=bilinear
+cscale=bilinear
+
+[4K]
+profile-desc=cond:get('width', -math.huge) >= 3840
+vd-lavc-threads=32
+
+[4K-inverted]
+profile-desc=cond:get('width', -math.huge) < 3840
+vd-lavc-threads=0
+
+
 [default]
-vo=opengl
+
 
 ###################################
 # Protocol Specific Configuration #
